API: Create custom concepts incl many descriptions